* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.11...dev][Unreleased]]

*** Added
*** Changed
+ *TAT.hpp*: The names of all inplace functions are renamed with a suffix =_=.
+ *TAT.py*: The names of all inplace functions are renamed with a suffix =_=.
*** Deprecated
*** Removed
+ *tetraux*: Package tetraux is removed, because it is useless since ansatz product state removed.
*** Fixed
+ *TAT.hpp*: Fix type mutability information in declaration of LAPACK function =?gesvd=.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.10...v0.3.11][v0.3.11]] - 2023-11-22

*** Added
+ *tetragono*: Add =gm_conf_eq= to equilibrium the configuration of the sampling lattice.
+ *TAT.py*: Add =TAT.parity=, =TAT.arrow= to convert =+1= to =False= and =-1= to =True=.
*** Changed
+ *tetragono*: The physics edge index should be non-negative now.
+ *tetragono*: Use MPI IO to speed up the performance of configurations. Previously, every process will read all
  configuration and choose a single configuration when reading, and allgather all configuration and write to file when
  writing. Now, the program uses MPI IO to write file parallelly, and read the corresponding configuration directly
  without read all configurations.
+ *tetragono*: Yield measurement result before save state and configuration in gradient descent of sampling lattice.
  Since user may want to update attributes out of yield.
+ *tetragono*: Allow user to set hamiltonian term on the same positions multiple times, which allows user to use
  =state.hamiltonians[positions]+=tensor=. Previously, the program will throw error saying hamiltonian term has already
  been set, but recently, some models need adding term on the same positions.
*** Removed
+ *tetragono*: Remove ansatz product state support, which may be added again in the future, but it require many updates.
*** Fixed
+ *tetragono*: Fix bug when total sampling number less than process number in sampling gradient.
